Implement add operation for member(s) after validating ootb users in OOTB (#537)